--- a/app/src/main/res/drawable/bg_spinner_country.xml
+++ b/app/src/main/res/drawable/bg_spinner_country.xml
@@ -8,11 +8,11 @@
             <item>
                 <shape>
                     <solid android:color="@color/white" />
-                    <corners android:radius="17dp" />
+                    <corners android:radius="4dp" />
                 </shape>
             </item>
 
-            <item android:drawable="@drawable/ic_baseline_keyboard_arrow_down_24" android:gravity="center_vertical|right" android:right="4dp" />
+            <item android:drawable="@drawable/ic_baseline_arrow_drop_down_24" android:gravity="center_vertical|right" />
 
         </layer-list>
 
