--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.screen.main.HomeActivity">
+        tools:context=".ui.screen.home.HomeActivity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_header"
@@ -65,8 +65,9 @@
             <Spinner
                 android:id="@+id/spinner_country"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/bg_spinner_country"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_select_country" />
@@ -95,7 +96,7 @@
                     android:id="@+id/tv_total_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="295,499"
+                    android:text="@string/_0"
                     android:textColor="#263238"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -106,7 +107,7 @@
                     android:id="@+id/tv_title_total_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Total Case"
+                    android:text="@string/total_case"
                     android:textColor="#FFC542"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -147,7 +148,7 @@
                     android:id="@+id/tv_active_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="63,187"
+                    android:text="@string/_0"
                     android:textColor="#263238"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -158,7 +159,7 @@
                     android:id="@+id/tv_title_active_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Active Case"
+                    android:text="@string/active_case"
                     android:textColor="#09B5FF"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -199,7 +200,7 @@
                     android:id="@+id/tv_recovered_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="221,340"
+                    android:text="@string/_0"
                     android:textColor="#263238"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -210,7 +211,7 @@
                     android:id="@+id/tv_title_recovered_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Recovered Case"
+                    android:text="@string/recovered"
                     android:textColor="#00BFA6"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -251,7 +252,7 @@
                     android:id="@+id/tv_death_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="10,972"
+                    android:text="@string/_0"
                     android:textColor="#263238"
                     android:textSize="16sp"
                     android:textStyle="bold"
@@ -262,7 +263,7 @@
                     android:id="@+id/tv_title_death_case"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Death Case"
+                    android:text="@string/death"
                     android:textColor="#FF464F"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -293,11 +294,12 @@
                 android:layout_height="match_parent">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_title_ratio_recovery"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="12dp"
-                    android:text="Ratio of\nRecovery"
+                    android:text="@string/ratio_of_nrecovery"
                     android:textColor="#263238"
                     android:textSize="16sp"
                     android:textStyle="bold"
